--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
-    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
-    "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
     "multer": "^1.4.2",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.12",
-    "react-bootstrap": "^1.6.3"
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
