--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "passport-google-oauth20": "^2.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node start",
+    "server": "nodemon server",
+    "heroku-postbuild": "NPM-CONFIG-PRODUCTION=false npm install --prefix client && run build --prefix client"
   },
   "keywords": [],
   "author": "",
