set to deployment

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.12"
   },
+  "engines": {
+    "npm": ">=8.1.0",
+    "node": ">=16.13.0"
+  },
   "scripts": {
     "start": "node start",
     "server": "nodemon server",
