--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "nodemon": "^2.0.12"
   },
   "engines": {
-    "npm": ">=8.1.0",
-    "node": ">=16.13.0"
+    "npm": "8.1.0",
+    "node": "16.13.0"
   },
   "scripts": {
     "start": "node start",
