--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "nodemon": "^2.0.12"
   },
   "engines": {
-    "npm": "8.1.0",
     "node": "16.13.0"
   },
   "scripts": {
     "start": "node start",
     "server": "nodemon server",
-    "heroku-postbuild": "NPM-CONFIG-PRODUCTION=false npm install --prefix client && run build --prefix client"
+    "heroku-postbuild": " npm install --prefix client && run build --prefix client"
   },
   "keywords": [],
   "author": "",
