--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "node start",
     "server": "nodemon server",
-    "heroku-postbuild": "npm install --prefix client && run build --prefix client"
+    "heroku-postbuild": "heroku config:set NPM_CONFIG_PRODUCTION=true npm install --prefix client && run build --prefix client"
   },
   "keywords": [],
   "author": "",
