--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "mongoose": "^5.12.14",
     "multer": "^1.4.2",
     "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0"
   },
   "engines": {
     "node": "16.13.0"
